--- a/styles.css
+++ b/styles.css
@@ -40,12 +40,31 @@ hr {
 }
 /* nav bar end */
 /* banner section start  */
+.banner-main{
+    display: flex;
+}
 .banner-1{
     width: 620px;
     height: 640px;
     background-color: rgb(188, 238, 238);
     margin-inline-start: 50px;
     border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-    
+    border-bottom-left-radius: 30px; 
+}
+.banner-2{
+    width: 620px;
+    height: 640px;
+    background-image: url(./img/baked-chicken-wings-asian-style-tomatoes-sauce-plate\ 1.png);
+    background-size: cover;
+    background-position: center;
+    border-radius: 30px;
+    overflow: hidden;   
+}
+.btn-1{
+    font-family: "Inter", sans-serif;
+    font-size: 14px;
+    width:156px;
+    height: 45px;
+    background-color: #FFF;
+    border-radius: 30px;
 }
