--- a/styles.css
+++ b/styles.css
@@ -57,14 +57,57 @@ hr {
     background-image: url(./img/baked-chicken-wings-asian-style-tomatoes-sauce-plate\ 1.png);
     background-size: cover;
     background-position: center;
-    border-radius: 30px;
-    overflow: hidden;   
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px; 
+      
+}
+.banner-text{
+    margin: 50px;
 }
 .btn-1{
     font-family: "Inter", sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     width:156px;
     height: 45px;
     background-color: #FFF;
     border-radius: 30px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    
+}
+.banner-text-1{
+    font-family: "Inter", sans-serif;
+
+}
+.banner-text-2{
+    font-size: 64px;
+    font-weight: 600;
+}
+.banner-text-3{
+    color: #232324;
+    font-size: 16px;
+    font-weight: 400;
+}
+.btn-2{
+    font-family: "Inter", sans-serif;
+    margin-top: 30px;
+    font-size: 18px;
+    color: rgba(0, 0, 0, 0.60);
+    width:156px;
+    height: 45px;
+    background-color: rgba(0, 0, 0, 0.05);
+    border-radius: 30px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+}
+.btn2all{
+    display: flex;
+    gap: 16px;
+
 }
