--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,22 @@ hr {
     gap: 16px;
 
 }
+.name{
+    width: 200px;
+    height: 60px;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    margin-top: 30px;
+}
+.sub-name{
+    font-family: "Inter", sans-serif;
+    color: black;
+    font-size: 16px;
+    font-weight: 700;
+}
+.date{
+    color: rgba(0, 0, 0, 0.60);
+    font-size: 14px;
+    font-weight: 500;
+}
