--- a/styles.css
+++ b/styles.css
@@ -117,16 +117,47 @@ hr {
     display: flex;
     gap: 15px;
     align-items: center;
-    margin-top: 30px;
+    
 }
 .sub-name{
     font-family: "Inter", sans-serif;
     color: black;
     font-size: 16px;
     font-weight: 700;
+    
 }
 .date{
     color: rgba(0, 0, 0, 0.60);
     font-size: 14px;
     font-weight: 500;
+}
+.btn-3{
+    width: 200px;
+    height: 60px;
+    background-color: black;
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    
+    
+}
+.sub-btn-3{
+    font-family: "Inter", sans-serif;
+    text-decoration: none;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;    
+}
+.main-name{
+    margin-top: 35px;
+    display: flex;
+    gap: 50px;
+    justify-content: space-between;
+    align-items: center;
 }
